--- a/openapi/spec3.yaml
+++ b/openapi/spec3.yaml
@@ -33,6 +33,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/Expand"
         - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/SortOrder"
       responses:
         "200":
           description: Successful response.
