--- a/.github/workflows/dispatch-codegen.yml
+++ b/.github/workflows/dispatch-codegen.yml
@@ -1,9 +1,10 @@
 name: Dispatch codegen
 on:
   workflow_dispatch: {}
+  repository_dispatch:
+    types: [codegen]
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   dispatch:
