--- a/.github/workflows/dispatch-codegen.yml
+++ b/.github/workflows/dispatch-codegen.yml
@@ -15,8 +15,8 @@ jobs:
         uses: tibdex/github-app-token@v2.1.0
         id: gh-api-token
         with:
-          app_id: ${{ secrets.DIGDIR_PLATFORM_CI_APP_ID }}
-          private_key: ${{ secrets.DIGDIR_PLATFORM_CI_APP_PRIVATE_KEY }}
+          app_id: ${{ secrets.EIN_CODEGEN_APP_ID }}
+          private_key: ${{ secrets.EIN_CODEGEN_APP_PRIVATE_KEY }}
 
       - name: TS Client
         uses: peter-evans/repository-dispatch@v2
